# dask-ee

./: MANIFEST.in  README.md  conftest.py  pyproject.toml
.github/workflows/: ci-build.yml  lint.yml  publish.yml
dask_ee/: __init__.py  default_test.py  read.py  read_integrationtest.py  read_test.py  write.py
dee/: __init__.py  default_test.py
