[project]
name = "dask-ee"
dynamic = ["version"]
description = "Google Earth Engine FeatureCollections via Dask DataFrames."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
  {name = "Alexander Merose", email = "al@merose.com"},
  {name = "Aaron Zuspan"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
  "earthengine-api>=0.1.374",
  "dask[dataframe]",
  "pandas",
]

[project.optional-dependencies]
tests = [
  "absl-py",
  "pytest",
  "pyink",
]
dev = [
  "dask-ee[tests]",
  "build",
]

[project.urls]
Homepage = "https://github.com/alxmrs/dask-ee"
Issues = "https://github.com/alxmrs/dask-ee/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pyink]
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.setuptools_scm]